Finally fixed all of the bootstrap migration issues. Albums are presented correctly and the post previewers are setup so that they dissapear if someone is on mobile.

--- a/static/clean-blog.css
+++ b/static/clean-blog.css
@@ -199,6 +199,11 @@ hr{
   text-align:left
 }
 
+.preview-holder{
+    margin-right:2px;
+    margin-left:2px;
+}
+
 .intro-text p{
   line-height: 120%;
   margin-top: 0px;
